crates/cypher-syntax/tests/snapshots/syntax_snapshots__clause_merge_node_on_create.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"MERGE (n:Person {name: 'A'}) ON CREATE SET n.created = 1 ON MATCH SET n.seen = 1 RETURN n\")"
---
SOURCE_FILE@0..89
  STATEMENT@0..89
    MERGE_CLAUSE@0..80
      MERGE_KW@0..5 "MERGE"
      PATTERN@5..28
        PATTERN_PART@5..28
          NODE_PATTERN@5..28
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            LABEL_EXPR@8..15
              COLON@8..9 ":"
              IDENT@9..15 "Person"
            PROPERTY_MAP@15..27
              WHITESPACE@15..16 " "
              L_BRACE@16..17 "{"
              IDENT@17..21 "name"
              COLON@21..22 ":"
              LITERAL_EXPR@22..26
                WHITESPACE@22..23 " "
                STRING_LITERAL@23..26 "'A'"
              R_BRACE@26..27 "}"
            R_PAREN@27..28 ")"
      MERGE_ACTION@28..56
        WHITESPACE@28..29 " "
        ON_KW@29..31 "ON"
        WHITESPACE@31..32 " "
        CREATE_KW@32..38 "CREATE"
        SET_CLAUSE@38..56
          WHITESPACE@38..39 " "
          SET_KW@39..42 "SET"
          SET_ITEM@42..56
            PROP_ACCESS_EXPR@42..52
              VAR_EXPR@42..44
                WHITESPACE@42..43 " "
                IDENT@43..44 "n"
              DOT@44..45 "."
              IDENT@45..52 "created"
            WHITESPACE@52..53 " "
            EQ@53..54 "="
            LITERAL_EXPR@54..56
              WHITESPACE@54..55 " "
              INT_LITERAL@55..56 "1"
      MERGE_ACTION@56..80
        WHITESPACE@56..57 " "
        ON_KW@57..59 "ON"
        WHITESPACE@59..60 " "
        MATCH_KW@60..65 "MATCH"
        SET_CLAUSE@65..80
          WHITESPACE@65..66 " "
          SET_KW@66..69 "SET"
          SET_ITEM@69..80
            PROP_ACCESS_EXPR@69..76
              VAR_EXPR@69..71
                WHITESPACE@69..70 " "
                IDENT@70..71 "n"
              DOT@71..72 "."
              IDENT@72..76 "seen"
            WHITESPACE@76..77 " "
            EQ@77..78 "="
            LITERAL_EXPR@78..80
              WHITESPACE@78..79 " "
              INT_LITERAL@79..80 "1"
    RETURN_CLAUSE@80..89
      WHITESPACE@80..81 " "
      RETURN_KW@81..87 "RETURN"
      RETURN_BODY@87..89
        RETURN_ITEMS@87..89
          RETURN_ITEM@87..89
            VAR_EXPR@87..89
              WHITESPACE@87..88 " "
              IDENT@88..89 "n"
