crates/cypher-syntax/tests/snapshots/syntax_snapshots__clause_remove_label.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"MATCH (n) REMOVE n:Admin\")"
---
SOURCE_FILE@0..24
  STATEMENT@0..24
    MATCH_CLAUSE@0..9
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..9
        PATTERN_PART@5..9
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
    REMOVE_CLAUSE@9..24
      WHITESPACE@9..10 " "
      REMOVE_KW@10..16 "REMOVE"
      REMOVE_ITEM@16..24
        VAR_EXPR@16..18
          WHITESPACE@16..17 " "
          IDENT@17..18 "n"
        LABEL_EXPR@18..24
          COLON@18..19 ":"
          IDENT@19..24 "Admin"
