crates/cypher-syntax/tests/snapshots/syntax_snapshots__clause_return_basic.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
assertion_line: 116
expression: "format_with_errors(\"RETURN 1\")"
---
SOURCE_FILE@0..8
  STATEMENT@0..8
    RETURN_CLAUSE@0..8
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..8
        RETURN_ITEMS@6..8
          RETURN_ITEM@6..8
            LITERAL_EXPR@6..8
              WHITESPACE@6..7 " "
              INT_LITERAL@7..8 "1"
