crates/cypher-syntax/tests/snapshots/syntax_snapshots__clause_set_label.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"MATCH (n) SET n:Admin\")"
---
SOURCE_FILE@0..21
  STATEMENT@0..21
    MATCH_CLAUSE@0..9
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..9
        PATTERN_PART@5..9
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
    SET_CLAUSE@9..21
      WHITESPACE@9..10 " "
      SET_KW@10..13 "SET"
      SET_ITEM@13..21
        VAR_EXPR@13..15
          WHITESPACE@13..14 " "
          IDENT@14..15 "n"
        LABEL_EXPR@15..21
          COLON@15..16 ":"
          IDENT@16..21 "Admin"
