crates/cypher-syntax/tests/snapshots/syntax_snapshots__clause_set_property.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"MATCH (n:Person) SET n.active = true\")"
---
SOURCE_FILE@0..36
  STATEMENT@0..36
    MATCH_CLAUSE@0..16
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..16
        PATTERN_PART@5..16
          NODE_PATTERN@5..16
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            LABEL_EXPR@8..15
              COLON@8..9 ":"
              IDENT@9..15 "Person"
            R_PAREN@15..16 ")"
    SET_CLAUSE@16..36
      WHITESPACE@16..17 " "
      SET_KW@17..20 "SET"
      SET_ITEM@20..36
        PROP_ACCESS_EXPR@20..29
          VAR_EXPR@20..22
            WHITESPACE@20..21 " "
            IDENT@21..22 "n"
          DOT@22..23 "."
          IDENT@23..29 "active"
        WHITESPACE@29..30 " "
        EQ@30..31 "="
        LITERAL_EXPR@31..36
          WHITESPACE@31..32 " "
          TRUE_KW@32..36 "true"
